kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-service
spec:
  selector:
    app: my-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
